# babelbooks

./: .pre-commit-config.yaml  README.md  setup.sh
api/: .env  .gitignore  Cargo.toml  Dockerfile  test.json
api/migrations/2021-03-01-222616_create_posts/: down.sql  up.sql
api/src/: account_manager.rs  database.rs  gbooks.rs  main.rs  models.rs  schema.rs  structs.rs  validation.rs
app/: App.tsx  Home.tsx  babel.config.js  package-lock.json  package.json
app/components/: book_card.tsx
app/pages/: Home.tsx
