[package]
name = "api"
version = "0.1.0"
authors = ["Ricardo Delfin <me@rdelfin.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "3"}
anyhow = "1.0"
diesel = { version = "1.4", features = ["sqlite"] }
dotenv = "0.15"
reqwest = { version = "0.10", features = ["json"] }
serde = "1.0"
structopt = "0.3"
